foundation css exercises

--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -18,3 +18,14 @@ button {
   font-size: small;
   text-align: center;
 }
+
+button {
+  transition: font-size 1s ease-out 0.25s;
+}
+
+button:hover {
+  font-size: x-large;
+  cursor: pointer;
+}
+
+
